--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev rollup --watch -c",
     "build": "rimraf dist && cross-env NODE_ENV=prod rollup -c",
-    "test": "npm run build && ava -v"
+    "test": "ava -v"
+  },
+  "ava": {
+    "require": [
+      "esm"
+    ]
   },
   "repository": {
     "type": "git",
@@ -26,6 +31,7 @@
     "ava": "^1.0.1",
     "cross-env": "^5.2.0",
     "eslint-config-doran": "^1.0.7",
+    "esm": "^3.0.84",
     "prettier": "^1.15.3",
     "rimraf": "^2.6.3",
     "rollup": "^1.0.1",
