--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev rollup --watch -c",
     "build": "rimraf dist && cross-env NODE_ENV=prod rollup -c",
-    "test": "ava -v"
+    "test": "ava -v",
+    "publish": "sh scripts/release.sh"
   },
   "ava": {
     "require": [
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "ava": "^1.0.1",
+    "conventional-changelog-cli": "^2.0.11",
     "cross-env": "^5.2.0",
     "eslint-config-doran": "^1.0.7",
     "esm": "^3.0.84",
