--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env NODE_ENV=dev rollup --watch -c",
     "build": "rimraf dist && cross-env NODE_ENV=prod rollup -c",
     "test": "ava -v",
-    "publish": "sh scripts/release.sh"
+    "pub": "sh scripts/release.sh"
   },
   "ava": {
     "require": [
