--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev rollup --watch -c",
     "build": "rimraf dist && cross-env NODE_ENV=prod rollup -c",
-    "test": "ava -v",
+    "test": "nyc ava -v && nyc report --reporter=html",
     "pub": "sh scripts/release.sh"
   },
   "ava": {
@@ -30,9 +30,11 @@
     "ava": "^1.0.1",
     "chinese-random-name": "^1.0.0",
     "conventional-changelog-cli": "^2.0.11",
+    "coveralls": "^3.0.4",
     "cross-env": "^5.2.0",
     "eslint-config-doran": "^1.0.8",
     "esm": "^3.0.84",
+    "nyc": "^14.1.1",
     "prettier": "^1.15.3",
     "rimraf": "^2.6.3",
     "rollup": "^1.0.1",
