fix: wrong cli file name

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     ]
   },
   "bin": {
-    "doctor-jones": "bin/doctor-jones"
+    "doctor-jones": "bin/dj"
   },
   "repository": {
     "type": "git",
